Fix radio button alignment

--- a/_sass/_dto.scss
+++ b/_sass/_dto.scss
@@ -1559,7 +1559,7 @@ input[type="radio"] {
       top: 18px;
       position: absolute;
       @media screen and (max-width: $screen-xs-max) {
-        top: 17px;
+        top: 14px;
       }
     }
   }
